# pcieuni-driver

./: .jenkinsfile  10-pciedev.rules  10-pcieuni.rules  CMakeLists.txt  Doxyfile  Makefile  Makefile.kernel  README  dkms-run.sh.in  dkms.conf  dkms.conf.in  dkms.post_install  dkms.post_remove  install_debian_package_at_DESY.sh  make_debian_package.sh  pciedev_drv.c  pciedev_fnc.c  pciedev_fnc.h  pciedev_ioctl_dma.c  pciedev_test  pciedev_test.cpp  pciedev_test10  pciedev_test12  pcieuni-symlinks  pcieuni_drv.c  pcieuni_drv.c.in  pcieuni_fnc.c  pcieuni_fnc.h  pcieuni_ioctl_dma.c  pcieuni_test.cpp
automatic_test/: CMakeLists.txt
automatic_test/executables_src/: testPcieuni.cc
automatic_test/include/: NormalReaderWriter.h  ReaderWriter.h  StructReaderWriter.h
automatic_test/src/: NormalReaderWriter.cc  ReaderWriter.cc  StructReaderWriter.cc
debian/: changelog  control  copyright  pciedev-dkms.dkms  pcieuni-dkms.dkms  postinst  rules
debian.in/: control  copyright  rules.in
doc/: Doxyfile  mainpage.dox
pciedev_project/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
test/: Makefile  devtest_device.cpp  devtest_device.h  devtest_main.cpp  devtest_test.cpp  devtest_test.h  devtest_timer.cpp  devtest_timer.h
test/doc/: Doxyfile  mainpage.dox
